# amqp-processor

./: LICENSE  README.md  amqp-processor.cabal  stack.yaml
src/AMQP/: Processor.hs
